# vait-govhack-melbourne-team-2021

./: .editorconfig  LICENSE.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Pipfile  README.md  app.py  package.json  pyproject.toml  sample.env  schema.graphql  serverless.yml
backend/.docker/: Dockerfile
backend/api/: __init__.py  mutations.py  queries.py  utils.py
db/: .env.sample
frontend/: .dockerignore  .env.sample  .eslintrc.json  .prettierrc.json  README.md  craco.config.js  package.json  serverless.yml
frontend/.docker/: Dockerfile
frontend/.docker/nginx/conf.d/: default.conf
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: Chart.jsx  Copyright.jsx  Dashboard.jsx  Deposits.jsx  EmergengyFormBody.jsx  ErrorPage.jsx  Main.jsx  Map.jsx  MenuItem.jsx  Root.jsx  Searchbar.jsx  SharedLayout.jsx  SubscribeFormBody.jsx  Title.jsx  UrqlContext.jsx
frontend/src/hooks/: useToggle.js
